--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
+        
         <title>"Web-knowhow"</title>
     </head>
 
     <body>
         <h1>Hello World!</h1>
+        <script src="script.js"></script>
     </body>
 
 
